--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,10 @@
-site_name: My Docs
+site_name: 孙子兵法
 theme:
   name: material
+  logo: assets/favicon.png
+  favicon: assets/favicon.png
+  icon:
+    repo: fontawesome/brands/github
   palette: 
     - primary: white
       accent: light blue
@@ -29,6 +33,8 @@ theme:
     # - toc.integrate
     - content.code.annotate
 edit_uri: edit/main/docs/
+repo_url: https://github.com/mmdjiji/szbf
+repo_name: mmdjiji/szbf
 markdown_extensions:
   - admonition              # 提示块
   - footnotes               # 脚注
@@ -52,3 +58,18 @@ markdown_extensions:
   - pymdownx.magiclink      # 自动识别超链接
   - pymdownx.tasklist:      # 复选框checklist
       custom_checkbox: true
+nav:
+  - 简介: index.md
+  - 始计篇: 01.sjp.md
+  - 作战篇: 02.zzp.md
+  - 谋攻篇: 03.mgp.md
+  - 军形篇: 04.jxp.md
+  - 兵势篇: 05.bsp.md
+  - 虚实篇: 06.xsp.md
+  - 军争篇: 07.jzp.md
+  - 九变篇: 08.jbp.md
+  - 行军篇: 09.xjp.md
+  - 地形篇: 10.dxp.md
+  - 九地篇: 11.jdp.md
+  - 火攻篇: 12.hgp.md
+  - 用间篇: 13.yjp.md
